package com.example.projetmobile_ecoleenligne.classes;

import java.util.HashMap;
import java.util.Map;

public class Examen {
    private long id;
    Map<String, String> ListeRéponse = new HashMap<>();


    public Examen() {}
}
